@@ -1,6 +1,6 @@
 @echo off
 chcp 65001 >nul
-title Koda Cut v0.4
+title Koda Connect v0.5
 cd /d "%~dp0"
 
 where javac >nul 2>&1
@@ -15,7 +15,7 @@ if errorlevel 1 (
 
 if not exist "out" mkdir "out"
 
-echo Compilando Koda Cut v0.4...
+echo Compilando Koda Connect v0.5...
 javac -encoding UTF-8 --release 17 -d out src\kodacut\*.java
 if errorlevel 1 (
   echo.
@@ -24,5 +24,5 @@ if errorlevel 1 (
   exit /b 1
 )
 
-echo Abrindo Koda Cut...
-java -cp out kodacut.KodaCut
+echo Abrindo Koda Connect...
+java --add-modules jdk.httpserver -cp out kodacut.KodaConnect
